--- a/index.html
+++ b/index.html
@@ -22,12 +22,14 @@
 
 <body class="body">
     <main class="main">
-        <!--  <section class="alertMsg">
-            <h2 class="alertMsg_header">TV shows added</h2>
-            <p class="alertMsg_para">Search now includes movies and tv shows.
-                More updates coming soon !!! <br> stay tuned Thank You!😊</p>
-            <button class="okaybtn">Okay</button>
-        </section>-->
+        <section class="alertMsg">
+            <h2 class="alertMsg_header">Announcement </h2>
+            <p class="alertMsg_para">Check out our new free music streaming site!
+                😊</p>
+            <a href="https://beatstreet.netlify.app/" target="_blank" class="alertLink">Visit Beatstreet</a>
+            <br>
+            <button class="okaybtn">Close</button>
+        </section>
         <div class="overlay"></div>
         <div class="overlay_side_navabar"></div>
         <div class="sidenav_container">
@@ -130,35 +132,7 @@
 
                         </div>
                     </div>
-                    <!-- <div class="first_box">
-                        <h4 class="about">
-                            Discover Movies and <br />
-                            TV shows. Enjoy awesome <br />
-                            quality content.
-                        </h4>
-                        <div class="logo">
-                            <img class="header_logo" src="./resources/D moviesand tv show.png" alt="" />
-                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3"
-                                stroke-linecap="round" stroke-linejoin="round" class="feather feather-check">
-                                <path d="M20 6L9 17l-5-5"></path>
-                            </svg>
-                            <div class="quality_about">
-                                <h5 class="free">Yes, It's all free</h5>
-                                <div class="quality">
-                                    <p>HD Quality</p>
-                                    <span class="dot"></span>
-                                    <p>CC</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="second_box">
-                        <h4 class="about">
-                            If you like us share <br />
-                            our site to your <br />
-                            friends.
-                        </h4>
-                    </div> -->
+
                 </div>
                 <section class="Now_playing_movies_container Now_playing_movies_container_trend" id="nowplaying">
                     <h4 class="Now_playing_movies_container_title">
