website for sell added

--- a/index.html
+++ b/index.html
@@ -22,15 +22,21 @@
 </head>
 
 <body class="body">
+    <div class="selladd-container">
+        <div class="selladd">website for sell, contact here: silenceking80@gmail.com</div>
+
+    </div>
+
     <main class="main">
-        <section class="alertMsg">
+        <!-- <section class="alertMsg">
             <h2 class="alertMsg_header">Announcement </h2>
             <p class="alertMsg_para">Check out our new free music streaming site!
                 😊</p>
             <a href="https://beatstreet.netlify.app/" target="_blank" class="alertLink">Visit Beatstreet</a>
             <br>
             <button class="okaybtn">Close</button>
-        </section>
+        </section> -->
+
         <div class="overlay"></div>
         <div class="overlay_side_navabar"></div>
         <div class="sidenav_container">
