--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 
 <body class="body">
     <div class="selladd-container">
-        <div class="selladd">website for sell, contact here: silenceking80@gmail.com</div>
+        <div class="selladd">This website just got Updated🎉. Checkout the New Verison here <a class="vercelLInk"
+                href="https://cinemaa.vercel.app/">www.cinemaa.vercel.app</a>
+        </div>
     </div>
 
     <main class="main">
